--- a/data/grammar_easy.json
+++ b/data/grammar_easy.json
@@ -32,5 +32,71 @@
   {"question": "She ___ in the park every afternoon.", "options": ["runs", "run", "running"], "answer": "runs"},
   {"question": "We ___ happy with the results.", "options": ["am", "is", "are"], "answer": "are"},
   {"question": "He ___ a lot of books in his room.", "options": ["has", "have", "had"], "answer": "has"},
-  {"question": "I ___ to school by bus every day.", "options": ["go", "goes", "going"], "answer": "go"}
+  {"question": "I ___ to school by bus every day.", "options": ["go", "goes", "going"], "answer": "go"},
+  {"question": "He ___ TV in the evening.", "options": ["watch", "watches", "watched"], "answer": "watches"},
+  {"question": "I ___ to music every day.", "options": ["listen", "listens", "listening"], "answer": "listen"},
+  {"question": "They ___ soccer on weekends.", "options": ["plays", "play", "playing"], "answer": "play"},
+  {"question": "We ___ dinner at 7 PM.", "options": ["eat", "eats", "eating"], "answer": "eat"},
+  {"question": "You ___ a good singer.", "options": ["are", "is", "am"], "answer": "are"},
+  {"question": "The cat ___ on the sofa.", "options": ["sleep", "sleeps", "sleeping"], "answer": "sleeps"},
+  {"question": "My brother ___ his room every week.", "options": ["clean", "cleans", "cleaning"], "answer": "cleans"},
+  {"question": "She ___ her car every month.", "options": ["wash", "washes", "washing"], "answer": "washes"},
+  {"question": "They ___ football in the park.", "options": ["play", "plays", "playing"], "answer": "play"},
+  {"question": "I ___ the guitar very well.", "options": ["play", "plays", "playing"], "answer": "play"},
+  {"question": "He ___ in the school choir.", "options": ["sing", "sings", "singing"], "answer": "sings"},
+  {"question": "We ___ our homework together.", "options": ["do", "does", "doing"], "answer": "do"},
+  {"question": "She ___ at work early.", "options": ["arrives", "arrive", "arriving"], "answer": "arrives"},
+  {"question": "I ___ an email every day.", "options": ["send", "sends", "sending"], "answer": "send"},
+  {"question": "They ___ home after school.", "options": ["go", "goes", "going"], "answer": "go"},
+  {"question": "He ___ a sandwich for lunch.", "options": ["make", "makes", "making"], "answer": "makes"},
+  {"question": "I ___ a book in my bag.", "options": ["have", "has", "had"], "answer": "have"},
+  {"question": "She ___ a letter to her friend.", "options": ["write", "writes", "writing"], "answer": "writes"},
+  {"question": "We ___ the lesson in class.", "options": ["study", "studies", "studying"], "answer": "study"},
+  {"question": "They ___ soccer every Sunday.", "options": ["plays", "play", "playing"], "answer": "play"},
+  {"question": "I ___ coffee in the morning.", "options": ["drink", "drinks", "drinking"], "answer": "drink"},
+  {"question": "He ___ a newspaper.", "options": ["read", "reads", "reading"], "answer": "reads"},
+  {"question": "She ___ in a hospital.", "options": ["work", "works", "working"], "answer": "works"},
+  {"question": "We ___ a movie tonight.", "options": ["watch", "watches", "watching"], "answer": "watch"},
+  {"question": "I ___ my homework before dinner.", "options": ["finish", "finishes", "finishing"], "answer": "finish"},
+  {"question": "They ___ to school by bike.", "options": ["go", "goes", "going"], "answer": "go"},
+  {"question": "He ___ a letter yesterday.", "options": ["send", "sent", "sending"], "answer": "sent"},
+  {"question": "She ___ every day at 6 AM.", "options": ["runs", "run", "running"], "answer": "runs"},
+  {"question": "I ___ my friend at the cafe.", "options": ["meet", "meets", "meeting"], "answer": "meet"},
+  {"question": "They ___ in the library after class.", "options": ["study", "studies", "studying"], "answer": "study"},
+  {"question": "He ___ breakfast at home.", "options": ["have", "has", "had"], "answer": "has"},
+  {"question": "She ___ a song beautifully.", "options": ["sing", "sings", "singing"], "answer": "sings"},
+  {"question": "We ___ to the supermarket together.", "options": ["go", "goes", "going"], "answer": "go"},
+  {"question": "I ___ a new friend today.", "options": ["meet", "met", "meeting"], "answer": "met"},
+  {"question": "They ___ their house clean.", "options": ["keeps", "keep", "keeping"], "answer": "keep"},
+  {"question": "He ___ a bike to school.", "options": ["rides", "ride", "riding"], "answer": "rides"},
+  {"question": "I ___ a letter now.", "options": ["am writing", "write", "writing"], "answer": "am writing"},
+  {"question": "She ___ the door at 8 AM.", "options": ["opens", "open", "opening"], "answer": "opens"},
+  {"question": "We ___ the bus to work.", "options": ["take", "takes", "taking"], "answer": "take"},
+  {"question": "They ___ at the new restaurant last night.", "options": ["eat", "ate", "eating"], "answer": "ate"},
+  {"question": "He ___ a computer game yesterday.", "options": ["plays", "played", "playing"], "answer": "played"},
+  {"question": "I ___ in the park today.", "options": ["walk", "walks", "walking"], "answer": "walk"},
+  {"question": "She ___ to the radio every morning.", "options": ["listen", "listens", "listening"], "answer": "listens"},
+  {"question": "We ___ our exams next week.", "options": ["have", "has", "had"], "answer": "have"},
+  {"question": "They ___ a new project at work.", "options": ["start", "starts", "starting"], "answer": "started"},
+  {"question": "He ___ hard for the test.", "options": ["study", "studies", "studying"], "answer": "studies"},
+  {"question": "I ___ the window because it's hot.", "options": ["open", "opens", "opening"], "answer": "open"},
+  {"question": "She ___ a beautiful portrait.", "options": ["draw", "draws", "drawing"], "answer": "draws"},
+  {"question": "We ___ a lot of water every day.", "options": ["drink", "drinks", "drinking"], "answer": "drink"},
+  {"question": "They ___ early for the meeting.", "options": ["arrive", "arrives", "arriving"], "answer": "arrive"},
+  {"question": "He ___ in his office right now.", "options": ["is working", "works", "working"], "answer": "is working"},
+  {"question": "I ___ my car last weekend.", "options": ["wash", "washed", "washing"], "answer": "washed"},
+  {"question": "She ___ her lunch quickly.", "options": ["eats", "eat", "eating"], "answer": "eats"},
+  {"question": "We ___ a party next month.", "options": ["plan", "plans", "are planning"], "answer": "are planning"},
+  {"question": "They ___ every morning.", "options": ["walk", "walks", "walking"], "answer": "walk"},
+  {"question": "He ___ in the rain.", "options": ["is sleeping", "sleeping", "sleeps"], "answer": "is sleeping"},
+  {"question": "I ___ my favorite song now.", "options": ["am listening", "listen", "listening"], "answer": "am listening"},
+  {"question": "She ___ her job with care.", "options": ["do", "does", "did"], "answer": "does"},
+  {"question": "We ___ our house every Sunday.", "options": ["clean", "cleans", "cleaning"], "answer": "clean"},
+  {"question": "They ___ the books on the shelf.", "options": ["arrange", "arranges", "arranging"], "answer": "arrange"},
+  {"question": "He ___ about the exam.", "options": ["worry", "worries", "worrying"], "answer": "worries"},
+  {"question": "I ___ a cold last week.", "options": ["catch", "caught", "catching"], "answer": "caught"},
+  {"question": "She ___ her bag to school.", "options": ["carry", "carries", "carrying"], "answer": "carries"},
+  {"question": "We ___ a trip tomorrow.", "options": ["plan", "plans", "are planning"], "answer": "are planning"},
+  {"question": "They ___ a new song every month.", "options": ["release", "releases", "releasing"], "answer": "release"},
+  {"question": "He ___ his teeth twice a day.", "options": ["brush", "brushes", "brushing"], "answer": "brushes"}
 ]
