--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "api/*.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/\1.py" },
+    { "src": "/api/(.*)", "dest": "/api/$1.py" },
     { "src": "/", "dest": "/public/index.html" }
   ]
 }
