--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/*.py", "use": "@vercel/python" }
-  ],
+  "version": 3,
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.py" },
     { "src": "/", "dest": "/public/index.html" }
