--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
-    }
-  },
+  "builds": [
+    { "src": "api/*.py", "use": "@vercel/python@0.7.0" }
+  ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.py" },
     { "src": "/", "dest": "/public/index.html" }
