--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
   "builds": [
     { "src": "api/*.py", "use": "@vercel/python" }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.py" },
-    { "src": "/", "dest": "/public/index.html" }
-  ]
+"routes": [
+  { "src": "/api/(.*)", "dest": "/api/$1.py" },
+  { "src": "/", "dest": "/index.html" }
+]
 }
