--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "version": 2,
+  "version": 3,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" }
+  ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
     { "src": "/(.*)", "dest": "/public/index.html" }
