--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-  "version": 2,
+  "functions": {
+    "api/*.mjs": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "builds": [
-    { "src": "api/**/*.js", "use": "@vercel/node" }
+    { "src": "api/*.mjs", "use": "@vercel/node" }
   ],
+  "includeFiles": "data/**",
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/public/index.html" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
