--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/*.mjs": {
-      "runtime": "nodejs18.x",
+      "runtime": "@vercel/node@2.15.10",
       "includeFiles": "data/**"
     }
   },
