--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my-project",
+  "name": "quiz-app",
   "version": "1.0.0",
-  "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "node index.js",
-    "dev": "vercel dev"
+    "start": "vercel dev"
   },
   "dependencies": {
     "express": "^4.18.2"
