--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "quiz-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "vercel dev"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
+    "dev": "vercel dev"
   },
   "devDependencies": {
     "vercel": "^28.0.0"
