--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "devDependencies": {
     "vercel": "^28.0.0"
   },
+  "dependencies": {
+    "minimatch": "9.0.1"
+  },
   "engines": {
     "node": "18.x"
   }
